kubernetes/echo-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-write
  namespace: echo
spec:
  selector:
    matchLabels:
      app: echo-write
  replicas: 1
  template:
    metadata:
      labels:
        app: echo-write
        group: api
    spec:
      volumes:
        - name: echo-pv-storage
          persistentVolumeClaim:
            claimName: echo-pv-claim
      hostname: echo-server
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
          - "echo1.local"
          - "echo2.local"
      containers:
      - name: echo1
        image: gcr.io/google_containers/echoserver:1.10
        ports:
        - name: echo1
          containerPort: 8080
        volumeMounts:
          - mountPath: "/data/echo1"
            name: echo-pv-storage
        resources:
          limits:
            cpu: "0.1"
            memory: "20Mi"
          requests:
            cpu: "0.08"
            memory: "8Mi"
      - name: echo2
        image: gcr.io/google_containers/echoserver:1.10
        ports:
        - name: echo2
          containerPort: 8080
        volumeMounts:
          - mountPath: "/data/echo2"
            name: echo-pv-storage
        resources:
          limits:
            cpu: "0.08"
            memory: "20Mi"
          requests:
            cpu: "0.05"
            memory: "3Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-read
  namespace: echo
spec:
  selector:
    matchLabels:
      app: echo-read
  replicas: 1
  template:
    metadata:
      labels:
        app: echo-read
        group: api
    spec:
      volumes:
        - name: echo-pv-storage
          persistentVolumeClaim:
            claimName: echo-pv-claim-read
      hostname: echo-server
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
          - "echo1.local"
          - "echo2.local"
      containers:
      - name: echo3
        image: gcr.io/google_containers/echoserver:1.10
        ports:
        - name: echo3
          containerPort: 8080
        volumeMounts:
          - mountPath: "/data/echo3"
            name: echo-pv-storage
        resources:
          limits:
            cpu: "0.08"
            memory: "15Mi"
          requests:
            cpu: "0.05"
            memory: "1Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service-write
  namespace: echo
spec:
  ports:
  - port: 8081
    targetPort: echo1
    protocol: TCP
    name: echo1
  - port: 8082
    targetPort: echo2
    protocol: TCP
    name: echo2
  selector:
    app: echo-write
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service-read
  namespace: echo
spec:
  ports:
  - port: 8080
    targetPort: echo3
    protocol: TCP
    name: echo3
  selector:
    app: echo-read
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  namespace: echo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  # http://echo-read.k8cluster.local/echo
  - host: echo-read.k8cluster.local
    http:
      paths:
      - path: /echo
        pathType: Prefix
        backend:
          service:
            name: echo-service-read
            port:
              number: 8080
  # http://echo-write.k8cluster.local/echo1
  # http://echo-write.k8cluster.local/echo2
  - host: echo-write.k8cluster.local
    http:
      paths:
      - path: /echo1
        pathType: Prefix
        backend:
          service:
            name: echo-service-write
            port:
              number: 8081
      - path: /echo2
        pathType: Prefix
        backend:
          service:
            name: echo-service-write
            port:
              number: 8082
